data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_576.wast
;; 7. **Test Description**: Develop a test function with recursive calls interspersed with `nop` instructions. Ensure the recursion correctly terminates and returns the expected value without stack overflow or incorrect returns.    - **Constraint Checked**: Ensures recursion termination.    - **Relation to Improper Handling**: Mismanaged `nop` could corrupt recursion base or stack.

(assert_invalid
  (module
    (func $test-recursion (result i32)
      (local $counter i32)
      (local.set $counter (i32.const 10))
      (block $exit
        (loop $loop
          (local.set $counter 
            (i32.sub (local.get $counter) (i32.const 1)))
          (nop)
          (br_if $exit (i32.eq (local.get $counter) (i32.const 0)))
          (br $loop))))
  )
  "type mismatch"
)